--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             <span class="subheading">Pricing</span>
             <h2 class="heading-secondary">Eating well without breaking the bank</h2>
         </div>
-        <div class="container grid grid--2-cols">
+        <div class="container grid grid--2-cols margin-bottom-md">
             <div class="pricing-plan pricing-plan--starter">
                 <header class="plan-header">
                     <p class="plan-name">Starter</p>
@@ -340,7 +340,7 @@
                         <span>1 meal every day</span></li>
                     <li class="list-item">
                         <ion-icon class="list-icon" name="checkmark-circle-outline"></ion-icon>
-                        <span>Order times are between 11am and 9pm</span></li>
+                        <span>Order times are between 11been and 9pm</span></li>
                     <li class="list-item">
                         <ion-icon class="list-icon" name="checkmark-circle-outline"></ion-icon>
                         <span>Delivery is free</span></li>
@@ -381,11 +381,37 @@
         </div>
 
 
+        <div class="container grid">
+            <aside class="plan-details">
+                Prices include all applicable taxes. You can cancel at any time .Both plans include the following:
+            </aside>
+        </div>
+
         <div class="container grid grid--4-cols ">
-            <div class="features">Feature 1</div>
-            <div class="features">Feature 2</div>
-            <div class="features">Feature 3</div>
-            <div class="features">Feature 4</div>
+            <div class="features">
+                <ion-icon name="nutrition-outline" class="feature-icon"></ion-icon>
+                <p class="feature-title">Local and organic</p>
+                <p class="feature-text">Our cooks only use local, fresh and organic products to prepare your meals</p>
+            </div>
+            <div class="features">
+                <ion-icon name="infinite-outline" class="feature-icon"></ion-icon>
+                <p class="feature-title">Never cook again!</p>
+                <p class="feature-text"> Our subscriptions cover 365 days per year, even including major
+                    holidays</p>
+            </div>
+
+                 <div class="features">
+                <ion-icon name="leaf-outline" class="feature-icon"></ion-icon>
+                <p class="feature-title">No waste</p>
+                <p class="feature-text">All our partners only use reusable containers to package all your meals</p>
+            </div>
+
+                 <div class="features">
+                <ion-icon name="pause-outline" class="feature-icon"></ion-icon>
+                <p class="feature-title">Pause Anytime</p>
+                <p class="feature-text">Going on vacation? Pause your subscription, and we refund. unused days </p>
+            </div>
+
         </div>
     </section>
 </main>
